Improve config management; Fix sql queries;