@@ -5,6 +5,7 @@ import org.shrigorevich.ml.domain.structure.StructBlock;
 import org.shrigorevich.ml.domain.structure.models.StructModel;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class AbodeStructImpl extends VolumeStructImpl implements ExAbodeStructure {
 
@@ -14,7 +15,7 @@ public class AbodeStructImpl extends VolumeStructImpl implements ExAbodeStructur
     public AbodeStructImpl(StructModel model, List<StructBlock> blocks) {
         super(model, blocks);
         this.name = model.getName();
-        this.spawnBlocks = blocks.stream().filter(b -> b.getType() == BlockType.ABODE_SPAWN).toList();
+        this.spawnBlocks = blocks.stream().filter(b -> b.getType() == BlockType.ABODE_SPAWN).collect(Collectors.toList());
     }
 
     @Override
